--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -28,6 +28,10 @@
     font-family: 'CrimsonPro';
 }
 
+.card-content a {
+    text-decoration: none;
+}
+
 .bold {
     font-weight: 300;
     font-size: 3rem;
@@ -39,19 +43,24 @@
     }
     .bold {
         font-weight: 100;
-        font-size: 2rem;
+        font-size: 3rem;
     }
 }
 
 @media only screen and (max-width: 920px) {
     .card-border {
         width: 70vw;
+        padding: 1rem 1.5rem;
     }
     .bold {
-        font-size: 2rem;
+        font-size: 1rem;
+        font-weight: 200;
     }
     .initials {
-        font-size: 9rem;
+        font-size: 7rem;
+    }
+    .card-content {
+        font-size: 0.6rem;
     }
 }
 
