--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -20,7 +20,7 @@
 }
 
 .card {
-    padding: 5rem 4rem;
+    padding: 2rem;
     width: 50vw;
     height: 40vh;
     margin: auto;
@@ -32,6 +32,8 @@
     backface-visibility: hidden;
     transition: transform 1s ease-in-out;
     left: 25%;
+    display: flex;
+    flex-direction: column;
 }
 
 .map {
@@ -46,6 +48,7 @@
 .card-back {
     transform: rotateX(-180deg);
     padding-top: 1rem;
+    overflow: hidden;
 }
 
 .flip-card:hover .card-front {
@@ -75,6 +78,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    flex-grow: 1;
 }
 
 .card-front .title {
@@ -133,6 +137,7 @@
     }
     .card-content {
         font-size: 0.6rem;
+        padding-bottom: 1rem;
     }
     .card-content p {
         margin: 0.3rem;
