--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,15 @@ main {
   width: 5rem;
   padding-bottom: 2rem;
   opacity: 20%;
+  z-index: -2;
+  pointer-events: none;
 }
 
 .back-icon {
   display: none;
   position: absolute;
+  z-index: -99;
+  pointer-events: none;
 }
 
 .flip-card:hover .back-icon {
